# bs_handin

./: .gitignore  README.md
Aufgabe01/handin_vorgabe01/: Cargo.toml  readme.md
Aufgabe01/handin_vorgabe01/src/: startup.rs
Aufgabe01/handin_vorgabe01/src/devices/: key.rs  kprint.rs
Aufgabe01/handin_vorgabe01/src/kernel/interrupts/: pic.rs
Aufgabe01/handin_vorgabe01/src/kernel/threads/: scheduler.rs  thread.asm
Aufgabe01/handin_vorgabe01/src/mylib/: input.rs
Aufgabe01/handin_vorgabe01/src/user/: hello_world_thread.rs
Aufgabe01/original_vorgabe01/: Makefile.toml
Aufgabe01/original_vorgabe01/src/: startup.rs
Aufgabe02/: original_vorgabe02.bz2
Aufgabe02/handin_vorgabe02/: Cargo.toml  Makefile.toml  readme.md
Aufgabe02/handin_vorgabe02/src/: consts.rs  startup.rs
Aufgabe02/original_vorgabe02/src/: ._startup.rs  startup.rs
Aufgabe03/: original_vorgabe03.bz2
Aufgabe03/handin_vorgabe03/: ._Cargo.toml  readme.md
Aufgabe03/handin_vorgabe03/src/: consts.rs
Aufgabe03/original_vorgabe03/: Cargo.toml
Aufgabe03/original_vorgabe03/src/: ._consts.rs  ._startup.rs  consts.rs  startup.rs
Aufgabe04/: original_vorgabe04.bz2
Aufgabe04/handin_vorgabe04/src/: ._startup.rs  consts.rs
Aufgabe04/handin_vorgabe04_02/: readme.md
Aufgabe04/handin_vorgabe04_02/src/: consts.rs  startup.rs
Aufgabe04/original_vorgabe04/: ._Cargo.toml  Cargo.toml
Aufgabe04/original_vorgabe04/src/: ._consts.rs  startup.rs
vorgabe1/: commands-hhuTOS.md  gdbcommands  hhu_tosr.json
vorgabe1/src/: consts.rs  startup.rs  z_original_startup.rs
vorgabe1/src/devices/: key.rs
(+82 files in other folders)
